[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/easy_sheet_manager/scripts/SpriteBox.gd" type="Script" id=1]
[ext_resource path="res://addons/easy_sheet_manager/scripts/DynamicButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.0352941 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.180392 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.235294, 0.258824, 0.498039, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0.254902, 0.337255, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.454902, 0.454902, 1 )

[node name="spr_box" type="Control"]
anchor_right = 0.104941
anchor_bottom = 0.0824008
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DynamicButton" type="Panel" parent="."]
margin_right = 78.0
margin_bottom = 39.0
focus_mode = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
theme_normal = SubResource( 1 )
theme_hover = SubResource( 2 )
theme_clicked = SubResource( 3 )

[node name="label" type="Label" parent="DynamicButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "ID"
align = 1
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="DynamicButton" to="DynamicButton" method="_on_gui_input"]
[connection signal="mouse_entered" from="DynamicButton" to="DynamicButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DynamicButton" to="DynamicButton" method="_on_mouse_exited"]
[connection signal="on_pressed" from="DynamicButton" to="." method="_on_DynamicButton_pressed"]
